contact.css
body,html
{
	
	font-family: 'Libre Baskerville', serif;
	text-align: center;
	width: 100%;
	padding: 0%;
	height: 100%;
	margin: 0%;
	line-height: 20px;
}
#bg
{
	position: fixed;
	min-width: 100%;
	min-height: 100%;
	height: auto;
	width: auto;
	z-index: -1000;
	overflow: hidden;
	top:0;
	left:0;
	background-repeat: no-repeat;
}
#logo_container
{
	height:150px;
	background:rgba(255,255,255,0.6);
	padding-bottom: 0.5em;
}

#name_container
{
	display: inline-block;
	margin-top: 75px;
	display: inline-block;
	color: black;
	word-spacing: 5px;
	font-size: 90px;
	font-weight: bold;
	letter-spacing:8px;
	min-width: 1100px;
	text-shadow:3px 5px 7px black;
}
#menu_container
{
	text-align: center;
	min-width: 1100px;
	padding: 0px;
}

#menu_container ul
{
	margin-left: auto;
	margin-right: auto;
	padding: 0px;
}

ul
{
	display: inline-block;
	list-style: none;
}

li /*adjust this later, make more specific */
{
	display: inline-block;
	padding: 20px 20px 20px 20px;
	border: solid;
	margin-left: 50px;
	margin-right: 50px;
	min-width: 122px;
	color: black;
}

li:hover
{
	border:solid thick rgb(128,128,128);
	/*background:rgba(255,255,255,1.0);*/
	background: rgba(160,160,160,0.4);
	-o-transition:.4s;
	-ms-transition:.4s;
	-moz-transition:.4s;
	-webkit-transition:.4s;
	transition:.4s;
	-moz-transform: translate(-2px, -2px);
	-ms-transform: translate(-2px, -2px);
	-o-transform: translate(-2px, -2px);
	-webkit-transform: translate(-2px, -2px);
	transform: translate(-2px, -2px)
}
#name_container a
{
	text-decoration: none;
	color: inherit;

}

#navigation_container a
{
	text-decoration: none;
}
#main_content
{

	border: solid thick #B8B8B8 ;
	width: 950px;
	padding-left: 20px;
	padding-right:20px;
	margin-left: auto;
	background:rgba(130,130,130,0.5);
	margin-right: auto;
	margin-top:20px;
overflow: hidden;
}
	#body_title
	{
		display:inline-block;
		float:left;
		margin:0px;
		padding-left:30px; 
		padding-bottom:40px;
		/*color:#686868;*/
		font-family: georgia,times,"Times New Roman";
		min-width: 500px;
		max-width: 650px;
	}
	
	#body_title h2
	{
		text-align: left;
		border-bottom: 2px solid #B8B8B8 ;
		padding-bottom: 20px;
	}

	#body_title p
	{
		text-align: left;
	}

	#contact_form
	{
		text-align: left;
		line-height: 50px;
	}
	#contact_header h2
	{
		height: 35px;
		color: black;
	}

	#required_email
	{
		margin-top: 5px;
		margin-bottom: 15px;
	}

	#other_info
	{
		margin-bottom: 15px;
	}

	#required_comment
	{
		margin-bottom: 15px;
		resize:none;
		min-width:650px;
		max-width:650px;
		height:100px;
	}
#side_content
{
	text-align: left;
	overflow:hidden;
}
#side_content h4
{
	border-bottom: solid #585858;
}
#side_content img
{
	width:35px;
	height:35px;
	margin-left: 30px;
}
#side_content a
{
	text-decoration: none;
	color: black;
	font-size:15px;
	font-family: verdana;
	text-shadow:5px 5px 10px black;
	margin-top: 20px;
}
#footer
{
    position: relative;    
    text-align: center;    
    bottom: 0px; 
    width: 100%;
    font-size: 12px;
    color: grey;
}

